[package]
name = "name-popularity"
version = "0.1.3"
authors = ["Techcable <Techcable@techcable.net>"]

[dependencies]
anyhow = "1"
once_cell = "1.4"
# Serde
serde = "1"
serde_derive = "1"
# Rocket
rocket = "0.4.5"
# bincode
bincode = "1.3"

# In-memory database (using LMDB)
[dependencies.heed]
version = "0.8"
enable-default-features = false
# NOTE: Its safe to use bincode because the database is private
features = ["lmdb", "serde-bincode"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]

[profile.release]
# ThinLTO
lto="thin"
