[project]
name = "techcable.name-popularity"
description = "A website to check the popularity of different names"
license = "BlueOak-1.0.0"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Topic :: Internet",
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    # not intended for general use
    "Private :: Do Not Upload",
]
# 3.12 adds type parameter syntax
requires-python = ">=3.12"
dependencies = [
    # FastAPI (TODO: When will this be stable?)
    "fastapi>=0.115",
    # other
    "cachebox~=5.0",
    "techcable.orderedset~=0.1",
    "pydantic-settings~=2.9",
    "SQLAlchemy~=2.0",
]

[dependency-groups]
mypy = ["mypy~=1.0", {include-group = "typing"}]
test = ["pytest~=8.3", "pytest-sugar~=1.0"]
typing = []
dev = [
    {include-group = "mypy"},
    {include-group = "test"},
    # TODO: While this includes the CLI and uvicorn that we want for development,
    # it also includes jinja2 & email-validator which could become undeclared runtime dependencies
    "fastapi[standard]"
]

[project.urls]
homepage = "https://names.techcable.net"
repository = "https://github.com/Techcable/name-popularity"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# NOTE: Using a version file avoids some overhead
#
# This file is explicitly ignored by version control.
write_to = "src/name_popularity/_version.py"

[tool.ruff.lint]
extend-fixable = [
    "F402", # allow removing unused imports
]
